# 433MHz_ROS_RasPi

./: .gitignore  Readme.md
rf_communication/: CMakeLists.txt  Readme.md  package.xml  setup.py
rf_communication/include/: variablesetup
rf_communication/include/rc-switch/: RCSwitch.h
rf_communication/include/support_scripts/: RFSupport.h  __init__.py  comms_data_eval.py  custom_logger.py  get_desktop.py  send_message.py  send_support.py
rf_communication/launch/: codesend.launch  codesend_test.launch  desktop_path.launch  full_launch.launch  listen.launch  receivemessage.launch  rfsniffer.launch  sendmessage.launch  variable_setup.launch
rf_communication/src/: CLOVER_README.md  RFSniffer.cpp  codesend.cpp  comms_data_eval.py  comms_data_eval.py.save  get_desktop  send_message.py  send_node
